<resources>
    <string name="app_name">CompaVoyage</string>

    <string-array name="liste_langues">
        <item>anglais</item>
        <item>chinois</item>
        <item>espagnol</item>
        <item>français</item>
        <item>italien</item>
        <item>japonais</item>
        <item>néerlandais</item>
        <item>portugais</item>
        <item>russe</item>
    </string-array>

    <string-array name="liste_preferences">
        <item>Gastronomie</item>
        <item>Histoire</item>
        <item>Architecture</item>
        <item>Nature</item>
        <item>Technologie</item>
        <item>Sport</item>
    </string-array>


    <!--Activity Ajout des voyages passés-->

    <string name="ajout_voyage_passe_titre">Ajouter vos voyages passés</string>
    <string name="ajout_voyage_passe_filtre">Filtrer par continent</string>
    <string name="ajout_voyage_passe_selection">Sélectionner les pays visités</string>

    <string-array name="listeRegionMonde">
        <item>Monde</item>
        <item>Afrique</item>
        <item>Amérique centrale et Caraïbes</item>
        <item>Amérique du Nord</item>
        <item>Amérique du sud</item>
        <item>Asie</item>
        <item>Asie du sud est</item>
        <item>Communauté des États indépendants</item>
        <item>Europe</item>
        <item>Moyen-Orient</item>
        <item>Océanie</item>
        <item>Région de l\'Arctique</item>
    </string-array>
    <string name="title_activity_ajout_voyage_futur">AjoutVoyageFutur</string>


    <!--Activity Ajout des voyages Futurs-->
    <string name="ajout_voyage_futur_titre">Ajouter votre projet de voyage</string>
    <string name="ajout_voyage_futur_selection">Où voulez-vous partir ?</string>
    <string name="ajout_voyage_futur_depart">Date de départ</string>
    <string name="ajout_voyage_futur_retour">Date de retour</string>


    <declare-styleable name="Vp_profil_pays_bref">

    </declare-styleable>


</resources>
